# hive-mind

./: .ghci  bare-project.cabal  default.nix  hive-mind.cabal  shell.nix
.config/: brittany.yaml
.config/ghci-scripts/: lax
src/app/: Main.hs
src/lib/: App.hs  Client.hs  Common.hs  DemoMind.hs  Game.hs  HelloWorld.hs  InteractiveCommand.hs  Render.hs  Types.hs
src/test/: ExampleSpec.hs  Spec.hs
tasks/: fix  load  run  watch
util/: touched-at
