cabal-version:       >=1.10
name:                hive-mind
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:
    HelloWorld
  hs-source-dirs:
    src/lib
  ghc-options: -Wall -O2 -threaded
  build-depends:       base
                      ,brick
                      ,safe
                      ,pretty-simple
                      ,raw-strings-qq
                      ,text
                      ,microlens-platform
                      ,QuickCheck
  default-language:    Haskell2010

executable hive-mind
  main-is:             Main.hs
  hs-source-dirs:
    src/app
  ghc-options: -Wall -O2 -threaded
  build-depends:       base
                      ,hive-mind
  default-language:    Haskell2010
